<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_apply_jobs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_apply_jobs"/>
    <item
        android:id="@+id/menu_black_lists"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_black_lists"/>
    <item
        android:id="@+id/menu_identify_status"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_identify_status"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
</menu>
