<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/quick_publish_jobs_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/title_bar"
            android:enabled="false"
            android:text="@string/quick_publish_jobs_titleBar"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0F0" />

        <com.baiyi.parttimejobs.myviews.LookHistory
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp" >
        </com.baiyi.parttimejobs.myviews.LookHistory>

        <Button
            android:id="@+id/quick_publish_jobs_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="#6f3"
            android:onClick="onPopupButtonClick"
            android:text="@string/popup_menu_button" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:padding="2dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_job_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_job_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_job_title_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_job_type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/quick_publish_job_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_job_worktime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/quick_publish_job_worktime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#0f0"
                    android:contentDescription="@string/action_settings"
                    android:onClick="onCalendarListener"
                    android:padding="2dp"
                    android:src="@drawable/add0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_usercount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_jobs_usercount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_jobs_usercount_hint"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_job_salary"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_job_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_job_salary_hint"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/quick_publish_job_salary_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_desc"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_jobs_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_jobs_desc_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/quick_publish_jobs_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/quick_publish_jobs_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/quick_publish_jobs_countryside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_addr"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_settings"
                    android:onClick="onImageViewClick"
                    android:src="@drawable/chatcat_icon_marka" />

                <EditText
                    android:id="@+id/quick_publish_jobs_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_jobs_addr_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_jobs_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_job_phone_hint"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_jobs_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_job_email_hint"
                    android:inputType="textWebEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_person"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/quick_publish_jobs_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/quick_publish_jobs_selector"
                    android:hint="@string/quick_publish_jobs_person_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/quick_publish_jobs_admit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quick_publish_jobs_admit" />

                <TextView
                    android:id="@+id/quick_publish_jobs_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="3dp"
                    android:text="@string/quick_publish_jobs_pro"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_orange_light" />
            </LinearLayout>

            <Button
                android:id="@+id/quick_publish_jobs_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/quick_publish_jobs_submit" />
        </GridLayout>
    </LinearLayout>

</ScrollView>